Fix header title text overlap with PSU logo on smaller screens
Adds display: block to the .logo-title anchor so margin-left applies
to all lines of wrapped text, preventing the second line from
overlapping the PSU logo at smaller viewport widths.

Closes #319

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -13,6 +13,7 @@ $theme-colors: (
 
 .logo-title {
   a {
+    display: block;
     border-left: 1px solid $white;
     color: $white;
     margin-left: 30px;
